.repair-init/repo/pkg/transparentproxy/firewalld/testdata/no_duplicates_direct.input.txt
* nat
-N KUMA_INBOUND
-N KUMA_OUTPUT
-A KUMA_INBOUND -p tcp --dport 15008 -j RETURN
-A PREROUTING -p tcp -j KUMA_INBOUND
-A KUMA_INBOUND -p tcp --dport 22 -j RETURN
-A KUMA_INBOUND -p tcp --dport 22 -j RETURN
-A KUMA_INBOUND -p tcp --dport 22 -j RETURN
-A OUTPUT -p tcp -j KUMA_OUTPUT
-A KUMA_OUTPUT -d 127.0.0.1/32 -j RETURN
-A OUTPUT -p tcp -j KUMA_OUTPUT
-A KUMA_OUTPUT -d 127.0.0.1/32 -j RETURN
-N KUMA_OUTPUT
-N KUMA_INBOUND
COMMIT
